assets/styles/index.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

.wrap {
    width: 100%;
    max-width: 1920px;
    height: 100%;
    min-height: 100vh;
    max-height: 1080px;
    margin: 0 auto;
    background-image: url(../images/bg.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    overflow: hidden;
}

.welcome {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: start;
    -ms-flex-align: start;
    align-items: flex-start;
    height: 209px;
    background-image: url(../images/flag.png);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: top center;
    position: relative;
    z-index: 5;
}

.welcome__text {
    display: block;
    max-width: 753px;
    width: 100%;
    margin: 50px auto 20px;
}

.features {
    width: 419px;
    height: 491px;
    margin: 80px auto 80px;
    position: relative;
    background-image: url(../images/features.png);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

.features__win {
    width: 379px;
    position: absolute;
    top: -147px;
    left: 44px;
    z-index: 15;
}

.features__btn {
    width: 308px;
    height: 91px;
    background-color: transparent;
    background-image: url(../images/btn.gif);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    position: absolute;
    z-index: 15;
    bottom: -45px;
    left: 0;
    right: 0;
    margin: auto;
    border: none;
    outline: none;
    cursor: pointer;
    color: #fff;
    font-family: "Manrope", sans-serif;
    font-size: 30px;
}

.features__blink {
    position: absolute;
    top: -29px;
    left: -16px;
}

.features__money {
    width: 436px;
    position: absolute;
    left: -33px;
    bottom: -145px;
}

.features__money1 {
    width: 141px;
    position: absolute;
    right: -85px;
    bottom: 151px;
}

.features__money2 {
    position: absolute;
    right: -163px;
    top: 185px;
}

.features__diamond1 {
    width: 89px;
    position: absolute;
    top: 35px;
    left: -33px;
}

.features__diamond2 {
    width: 103px;
    position: absolute;
    top: 83px;
    right: -77px;
}

.features__robin {
    width: 432px;
    position: absolute;
    left: -687px;
    bottom: -200px;
    z-index: 14;
}

.features__girl {
    width: 356px;
    position: absolute;
    left: -501px;
    bottom: -150px;
    z-index: 13;
}

.features__finn {
    width: 408px;
    position: absolute;
    left: -320px;
    bottom: -160px;
    z-index: 13;
}

.features__reactoonz {
    width: 178px;
    position: absolute;
    left: -186px;
    top: -110px;
    z-index: 12;
}

.features__firehead {
    width: 551px;
    position: absolute;
    right: -705px;
    bottom: -125px;
    z-index: 10;
}

.features__cowboy {
    width: 333px;
    position: absolute;
    right: -390px;
    bottom: -125px;
    z-index: 8;
}

.features__inoplanet {
    width: 310px;
    position: absolute;
    right: -181px;
    bottom: -100px;
    z-index: 11;
}

.features__feya {
    width: 136px;
    position: absolute;
    right: -146px;
    top: -160px;
}

.features__bird {
    width: 130px;
    position: absolute;
    right: -560px;
    top: -122px;
}

.popup {
    display: none;
}

.popup__bg {
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 30;
    top: 0;
    left: 0;
    z-index: 20;
    background-color: rgba(0, 0, 0, 0.8);
}

.popup__container {
    width: 490px;
    height: 630px;
    padding: 56px;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    background-image: url(../images/popup_bg.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100% 100%;
    position: absolute;
    top: 180px;
    left: 0;
    right: 0;
    margin: auto;
    z-index: 31;
}

.popup__reg {
    position: absolute;
    top: -22px;
    left: 0;
    right: 0;
    margin: auto;
}

.popup__logo {
    position: absolute;
    top: -108px;
    left: 0;
    right: 0;
    margin: auto;
}

.popup__boy {
    position: absolute;
    top: -175px;
    left: 0;
    right: 0;
    margin: auto;
}

.popup__title {
    color: #B7B6BD;
    font: 400 18px "Manrope", sans-serif;
    text-align: center;
}

.popup__btn {
    width: 308px;
    height: 91px;
    background-color: transparent;
    background-image: url(../images/btn_light.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    position: absolute;
    bottom: -35px;
    left: 0;
    right: 0;
    margin: auto;
    border: none;
    outline: none;
    cursor: pointer;
    color: #fff;
    font-family: "Manrope", sans-serif;
    font-size: 30px;
}
/* ... */

